// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/basic.md correctly 1`] = `
<div
  class="c7n-tree c7n-tree-icon-hide"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    checkable="1"
    class="c7n-tree-list"
  >
    <div>
      <div
        class="c7n-tree-list-holder-inner"
        style="display:flex;flex-direction:column"
      >
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open c7n-tree-treenode-checkbox-checked c7n-tree-treenode-checkable"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-checked"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 1"
          >
            <span
              class="c7n-tree-title"
            >
              parent 1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-disabled c7n-tree-treenode-switcher-open c7n-tree-treenode-checkbox-checked c7n-tree-treenode-selected c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-checked c7n-tree-checkbox-disabled"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 1-0"
          >
            <span
              class="c7n-tree-title"
            >
              parent 1-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-disabled"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open c7n-tree-treenode-checkbox-checked c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-checked"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 1-1"
          >
            <span
              class="c7n-tree-title"
            >
              parent 1-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkbox-checked c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-checked"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title=""
          >
            <span
              class="c7n-tree-title"
            >
              <span
                style="color:#1890ff"
              >
                sss
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/basic-controlled.md correctly 1`] = `
<div
  class="c7n-tree c7n-tree-icon-hide"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    checkable="1"
    class="c7n-tree-list"
  >
    <div>
      <div
        class="c7n-tree-list-holder-inner"
        style="display:flex;flex-direction:column"
      >
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open c7n-tree-treenode-checkbox-indeterminate c7n-tree-treenode-checkable"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-indeterminate"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="0-0"
          >
            <span
              class="c7n-tree-title"
            >
              0-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open c7n-tree-treenode-checkbox-checked c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-checked"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="0-0-0"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkbox-checked c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-checked"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="0-0-0-0"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-0-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkbox-checked c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-checked"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="0-0-0-1"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-0-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkbox-checked c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox c7n-tree-checkbox-checked"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="0-0-0-2"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-0-2
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="0-0-1"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="0-0-1-0"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-1-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit"
            />
            <span
              class="c7n-tree-indent-unit"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="0-0-1-1"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-1-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="0-0-1-2"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-1-2
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkable"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="0-0-2"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-2
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkable"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_close"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close"
            title="0-1"
          >
            <span
              class="c7n-tree-title"
            >
              0-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close c7n-tree-treenode-checkable"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="0-2"
          >
            <span
              class="c7n-tree-title"
            >
              0-2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/customized-icon.md correctly 1`] = `
<div
  class="c7n-tree c7n-tree-show-line"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    checkable="0"
    class="c7n-tree-list"
  >
    <div>
      <div
        class="c7n-tree-list-holder-inner"
        style="display:flex;flex-direction:column"
      >
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 1"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__open"
            />
            <span
              class="c7n-tree-title"
            >
              parent 1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open c7n-tree-treenode-selected"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open c7n-tree-node-selected"
            title="parent 1-0"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__open"
            />
            <span
              class="c7n-tree-title"
            >
              parent 1-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          >
            <i
              class="icon icon-note c7n-tree-switcher-line-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__customize"
            >
              <i
                class="icon icon-airport_shuttle"
              />
            </span>
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          >
            <i
              class="icon icon-note c7n-tree-switcher-line-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__docu"
            />
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 1-1"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__open"
            />
            <span
              class="c7n-tree-title"
            >
              parent 1-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          >
            <i
              class="icon icon-note c7n-tree-switcher-line-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__docu"
            />
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          >
            <i
              class="icon icon-note c7n-tree-switcher-line-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__docu"
            />
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/directory.md correctly 1`] = `
<div
  class="c7n-tree c7n-tree-directory c7n-tree-directory-rtl"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    checkable="0"
    class="c7n-tree-list"
  >
    <div>
      <div
        class="c7n-tree-list-holder-inner"
        style="display:flex;flex-direction:column"
      >
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 0"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__customize"
            >
              <i
                class="icon icon-baseline-file_copy c7n-tree-switcher-line-icon"
              />
            </span>
            <span
              class="c7n-tree-title"
            >
              parent 0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf 0-0"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__customize"
            >
              <i
                class="icon icon-insert_drive_file c7n-tree-switcher-line-icon"
              />
            </span>
            <span
              class="c7n-tree-title"
            >
              leaf 0-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf 0-1"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__customize"
            >
              <i
                class="icon icon-insert_drive_file c7n-tree-switcher-line-icon"
              />
            </span>
            <span
              class="c7n-tree-title"
            >
              leaf 0-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 1"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__customize"
            >
              <i
                class="icon icon-baseline-file_copy c7n-tree-switcher-line-icon"
              />
            </span>
            <span
              class="c7n-tree-title"
            >
              parent 1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf 1-0"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__customize"
            >
              <i
                class="icon icon-insert_drive_file c7n-tree-switcher-line-icon"
              />
            </span>
            <span
              class="c7n-tree-title"
            >
              leaf 1-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf 1-1"
          >
            <span
              class="c7n-tree-iconEle c7n-tree-icon__customize"
            >
              <i
                class="icon icon-insert_drive_file c7n-tree-switcher-line-icon"
              />
            </span>
            <span
              class="c7n-tree-title"
            >
              leaf 1-1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/draggable.md correctly 1`] = `
<div
  class="c7n-tree c7n-tree-icon-hide draggable-tree"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    checkable="0"
    class="c7n-tree-list"
  >
    <div>
      <div
        class="c7n-tree-list-holder-inner"
        style="display:flex;flex-direction:column"
      >
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open draggable"
            draggable="true"
            title="0-0"
          >
            <span
              class="c7n-tree-title"
            >
              0-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open draggable"
            draggable="true"
            title="0-0-0"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal draggable"
            draggable="true"
            title="0-0-0-0"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-0-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal draggable"
            draggable="true"
            title="0-0-0-1"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-0-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal draggable"
            draggable="true"
            title="0-0-0-2"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-0-2
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_close"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close draggable"
            draggable="true"
            title="0-0-1"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal draggable"
            draggable="true"
            title="0-0-2"
          >
            <span
              class="c7n-tree-title"
            >
              0-0-2
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_close"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close draggable"
            draggable="true"
            title="0-1"
          >
            <span
              class="c7n-tree-title"
            >
              0-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            aria-grabbed="true"
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal draggable"
            draggable="true"
            title="0-2"
          >
            <span
              class="c7n-tree-title"
            >
              0-2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/dynamic.md correctly 1`] = `
<div
  class="c7n-tree c7n-tree-icon-hide"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    checkable="0"
    class="c7n-tree-list"
  >
    <div>
      <div
        class="c7n-tree-list-holder-inner"
        style="display:flex;flex-direction:column"
      >
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_close"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close"
            title="Expand to load"
          >
            <span
              class="c7n-tree-title"
            >
              Expand to load
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_close"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close"
            title="Expand to load"
          >
            <span
              class="c7n-tree-title"
            >
              Expand to load
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          />
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="Tree Node"
          >
            <span
              class="c7n-tree-title"
            >
              Tree Node
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/line.md correctly 1`] = `
<div
  class="c7n-tree c7n-tree-icon-hide c7n-tree-show-line"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    checkable="0"
    class="c7n-tree-list"
  >
    <div>
      <div
        class="c7n-tree-list-holder-inner"
        style="display:flex;flex-direction:column"
      >
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 1"
          >
            <span
              class="c7n-tree-title"
            >
              parent 1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="parent 1-0"
          >
            <span
              class="c7n-tree-title"
            >
              parent 1-0
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          >
            <i
              class="icon icon-note c7n-tree-switcher-line-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          >
            <i
              class="icon icon-note c7n-tree-switcher-line-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-start"
            />
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher-noop"
          >
            <i
              class="icon icon-note c7n-tree-switcher-line-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
            title="leaf"
          >
            <span
              class="c7n-tree-title"
            >
              leaf
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_close"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close"
            title="parent 1-1"
          >
            <span
              class="c7n-tree-title"
            >
              parent 1-1
            </span>
          </span>
        </div>
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
        >
          <span
            aria-hidden="true"
            class="c7n-tree-indent"
          >
            <span
              class="c7n-tree-indent-unit c7n-tree-indent-unit-end"
            />
          </span>
          <span
            class="c7n-tree-switcher c7n-tree-switcher_close"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close"
            title="parent 1-2"
          >
            <span
              class="c7n-tree-title"
            >
              parent 1-2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/search.md correctly 1`] = `
<div>
  <span
    class="c7n-input-wrapper c7n-input-has-suffix c7n-input-has-border"
    style="margin-bottom:8px"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered c7n-input-rendered-sm"
        >
          <input
            class="c7n-input c7n-input-sm c7n-input-search c7n-input-search-small"
            type="text"
            value=""
          />
          <div
            class="c7n-input-label-wrapper"
          >
            <div
              class="c7n-input-label"
            >
              Search
            </div>
          </div>
        </div>
        <span
          class="c7n-input-suffix c7n-input-suffix-sm"
        >
          <button
            class="c7n-btn c7n-btn-primary c7n-btn-circle c7n-btn-sm c7n-btn-icon-only c7n-btn-flat"
            type="button"
          >
            <i
              class="icon icon-search"
            />
            <div
              class="c7n-ripple-wrapper"
            />
          </button>
        </span>
      </div>
    </div>
  </span>
  <div
    class="c7n-tree c7n-tree-icon-hide"
  >
    <div
      role="tree"
    >
      <input
        style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
        tabindex="0"
        value=""
      />
    </div>
    <div
      checkable="0"
      class="c7n-tree-list"
    >
      <div>
        <div
          class="c7n-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
          >
            <span
              class="c7n-tree-switcher c7n-tree-switcher_close"
            >
              <i
                class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
              />
            </span>
            <span
              class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close"
              title=""
            >
              <span
                class="c7n-tree-title"
              >
                <span>
                  <span
                    style="color:#f50"
                  />
                  0-0
                </span>
              </span>
            </span>
          </div>
          <div
            class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
          >
            <span
              class="c7n-tree-switcher c7n-tree-switcher_close"
            >
              <i
                class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
              />
            </span>
            <span
              class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-close"
              title=""
            >
              <span
                class="c7n-tree-title"
              >
                <span>
                  <span
                    style="color:#f50"
                  />
                  0-1
                </span>
              </span>
            </span>
          </div>
          <div
            class="c7n-tree-treenode c7n-tree-treenode-switcher-close"
          >
            <span
              class="c7n-tree-switcher c7n-tree-switcher-noop"
            />
            <span
              class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="c7n-tree-title"
              >
                <span>
                  <span
                    style="color:#f50"
                  />
                  0-2
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tree/demo/virtual-scroll.md correctly 1`] = `
<div
  class="c7n-tree c7n-tree-icon-hide"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    checkable="1"
    class="c7n-tree-list"
    style="height:233px;overflow-y:auto;overflow-anchor:none"
  >
    <div
      style="height:222200px;position:relative;overflow:hidden"
    >
      <div
        class="c7n-tree-list-holder-inner"
        style="display:flex;flex-direction:column;transform:translateY(0px);position:absolute;left:0;right:0;top:0"
      >
        <div
          class="c7n-tree-treenode c7n-tree-treenode-switcher-open c7n-tree-treenode-checkable"
        >
          <span
            class="c7n-tree-switcher c7n-tree-switcher_open"
          >
            <i
              class="icon icon-arrow_drop_down c7n-tree-switcher-icon"
            />
          </span>
          <span
            class="c7n-tree-checkbox"
          >
            <span
              class="c7n-tree-checkbox-inner"
            />
          </span>
          <span
            class="c7n-tree-node-content-wrapper c7n-tree-node-content-wrapper-open"
            title="0-0"
          >
            <span
              class="c7n-tree-title"
            >
              0-0
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
